--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div id="nav-bar">
                     <ul>
                         <a href="../Landing Page/index.html"><li>Home</li></a>
-                        <a href="About Page/About.html"><li>About Us</li></a>
-                        <a href="Subject Page/subject.html"><li>Subjects</li></a>
-                        <a href="Feedback/Feedback.html"><li>Feedback</li></a>
+                        <a href="./About Page/About.html"><li>About Us</li></a>
+                        <a href="./Subject Page/subject.html"><li>Subjects</li></a>
+                        <a href="./Feedback/Feedback.html"><li>Feedback</li></a>
                     </ul>
                 </div>
 
