--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <div id="nav-bar">
                     <ul>
-                        <a href="index.html"><li>Home</li></a>
+                        <a href="./index.html"><li>Home</li></a>
                         <a href="./About Page/About.html"><li>About Us</li></a>
                         <a href="./Subject Page/subject.html"><li>Subjects</li></a>
                         <a href="./Feedback/Feedback.html"><li>Feedback</li></a>
@@ -106,7 +106,7 @@
             </div>
 
             <div id="more-bar">
-                <a href="../Subject Page/subject.html"><button>View All</button></a>
+                <a href="./Subject Page/subject.html"><button>View All</button></a>
             </div>
         </div>
 
