--- a/Subject Page/subject.html
+++ b/Subject Page/subject.html
@@ -86,6 +86,20 @@
                         </div>
                     </li>
                 </a>
+
+                <a href="https://drive.google.com/drive/folders/14sEdaqZTDYXgV7sI6OwrFQ7tyS90T30I?usp=sharing" target="_blank">
+                    <li>
+                        <div id="card">
+                            <div id="card-left">
+                                <h1>Software Engineering</h1>
+                                <p>Learn about software engineering for semester exams.</p>
+                            </div>
+                            <div id="card-right">
+                                <img src="Assets/software.jpeg" alt="">
+                            </div>
+                        </div>
+                    </li>
+                </a>
                 
             </ul>
         </div>
