--- a/Subject Page/subject.html
+++ b/Subject Page/subject.html
@@ -95,7 +95,7 @@
                                 <p>Learn about software engineering for semester exams.</p>
                             </div>
                             <div id="card-right">
-                                <img src="Assets/software.jpeg" alt="">
+                                <img src="Assets/software.jpg" alt="">
                             </div>
                         </div>
                     </li>
