--- a/Subject Page/subject.html
+++ b/Subject Page/subject.html
@@ -95,7 +95,21 @@
                                 <p>Learn about software engineering for semester exams.</p>
                             </div>
                             <div id="card-right">
-                                <img src="Assets/software.jpg" alt="">
+                                <img src="Assets/software.png" alt="">
+                            </div>
+                        </div>
+                    </li>
+                </a>
+
+                <a href="https://drive.google.com/drive/folders/1Yq-3Xa8DAYRKMGWX4FaIX9Yz_skVB-_n?usp=sharing" target="_blank">
+                    <li>
+                        <div id="card">
+                            <div id="card-left">
+                                <h1>Data Communications & Networks</h1>
+                                <p>Learn about the concept of networking and how communication takes place between deivces.</p>
+                            </div>
+                            <div id="card-right">
+                                <img src="Assets/networks.png" alt="">
                             </div>
                         </div>
                     </li>
